tests/types/errors/fetch_url_type.mochi
let x = fetch 123
